--- a/index.html
+++ b/index.html
@@ -19526,8 +19526,8 @@
   <link rel="alternate" type="application/rss+xml" title="Spring News" href="/blog/category/news.atom">
   <link rel="alternate" type="application/rss+xml" title="Spring Engineering" href="/blog/category/engineering.atom">
   <link rel="alternate" type="application/rss+xml" title="Spring Security Advisories" href="/security.atom">
-  <script id="mktoForms" type="text/javascript" async=""
-    src="//app-sj05.marketo.com/js/forms2/js/forms2.min.js"></script>
+  <!-- <script id="mktoForms" type="text/javascript" async=""
+    src="//app-sj05.marketo.com/js/forms2/js/forms2.min.js"></script> -->
   <link rel="prefetch" href="/page-data/index/page-data.json" crossorigin="anonymous" as="fetch">
   <link rel="prefetch" href="/page-data/guides/gs/scheduling-tasks/page-data.json" crossorigin="anonymous" as="fetch">
   <link rel="prefetch" href="/page-data/guides/gs/rest-service/page-data.json" crossorigin="anonymous" as="fetch">
