--- a/index.html
+++ b/index.html
@@ -19563,8 +19563,10 @@
   
   <div id="___gatsby">
     <div tabindex="-1" id="gatsby-focus-wrapper" style="outline: none;">
-      <div>
+      <div>        
+        <div style="background-color: #bbbcbe; text-align: center;">本站为社区翻译站，与 Spring 官方无关</div>
         <div class="header">
+          
           <nav id="header" class="navbar is-transparent " role="navigation" aria-label="main-navigation">
             <div class="container is-hidden-mobile is-hidden-tablet-only">
               <div class="navbar-brand"><a class="navbar-item" title="Logo" href="/"><svg version="1.1"
@@ -19649,7 +19651,7 @@
                       d="M365.7,296.4c-49.5,66.1-155.9,43.7-223.7,47c0,0-12.1,0.8-24.1,2.5c0,0,4.6-2.1,10.4-4.2 c47.8-16.6,70.3-20,99.4-34.9c54.5-27.9,108.9-89,119.8-152.2c-20.8,60.7-84,113.1-141.4,134.3c-39.5,14.6-110.6,28.7-110.6,28.7 l-2.9-1.7c-48.2-23.7-49.9-128.5,38.3-162.2c38.7-15,75.3-6.7,117.3-16.6c44.5-10.4,96.1-43.7,116.8-87.3 C388.1,120.1,416.4,229,365.7,296.4z">
                     </path>
                   </svg></a></div>
-              <div class="navbar-menu">
+              <!-- <div class="navbar-menu">
                 <div role="navigation" class="navbar-end has-text-centered">
                   <div class="navbar-item has-dropdown is-hoverable   navbar-group-item"><span class="navbar-link">Why
                       Spring</span>
@@ -19718,7 +19720,7 @@
                       <path fill="currentColor"
                         d="M361.5 1.2c5 2.1 8.6 6.6 9.6 11.9L391 121l107.9 19.8c5.3 1 9.8 4.6 11.9 9.6s1.5 10.7-1.6 15.2L446.9 256l62.3 90.3c3.1 4.5 3.7 10.2 1.6 15.2s-6.6 8.6-11.9 9.6L391 391 371.1 498.9c-1 5.3-4.6 9.8-9.6 11.9s-10.7 1.5-15.2-1.6L256 446.9l-90.3 62.3c-4.5 3.1-10.2 3.7-15.2 1.6s-8.6-6.6-9.6-11.9L121 391 13.1 371.1c-5.3-1-9.8-4.6-11.9-9.6s-1.5-10.7 1.6-15.2L65.1 256 2.8 165.7c-3.1-4.5-3.7-10.2-1.6-15.2s6.6-8.6 11.9-9.6L121 121 140.9 13.1c1-5.3 4.6-9.8 9.6-11.9s10.7-1.5 15.2 1.6L256 65.1 346.3 2.8c4.5-3.1 10.2-3.7 15.2-1.6zM160 256a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zm224 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z">
                       </path>
-                    </svg></span><span class="text">light</span></label>
+                    </svg></span><span class="text">light</span></label> -->
               </div>
             </div>
             <div class="container navbar-mobile is-hidden-desktop">
@@ -20507,7 +20509,7 @@
             </div>
           </div>
         </div>
-        <footer class="footer has-background-white">
+        <!-- <footer class="footer has-background-white">
           <div class="content has-text-left">
             <div class="container mb-6 links">
               <div class="columns is-desktop">
@@ -20761,7 +20763,7 @@
               </div>
             </div>
           </div>
-        </footer>
+        </footer> -->
       </div>
     </div>
     <div id="gatsby-announcer" aria-live="assertive" aria-atomic="true"
