--- a/index.html
+++ b/index.html
@@ -20775,6 +20775,20 @@
   <form novalidate="novalidate" class="mktoForm mktoHasWidth mktoLayoutLeft"
     style="font-family: Helvetica, Arial, sans-serif; font-size: 13px; color: rgb(51, 51, 51); visibility: hidden; position: absolute; top: -500px; left: -1000px; width: 799px;">
   </form>
+
+
+
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?6d0e7f9c457d28defa688bfd53a5b528";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+
+
 </body>
 
 </html>
