clear js , add google ad , add baidu js

--- a/index.html
+++ b/index.html
@@ -20789,6 +20789,17 @@
     </script>
 
 
+
+<script data-ad-client="ca-pub-6515880978736385" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?f93c3bd48fa079598ff6f8f9cb89acc8";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </body>
 
 </html>
